# pbtechincal

./: Dockerfile  README.md  Untitled.ipynb  Untitled1.ipynb  create_amplicons.py  docker-compose.yml  fermsim.ipynb  guides.tsv  pyproject.toml
CompbioAssessment/: main.py
mlplayground/: ml.ipynb
