[tool.poetry]
name = "pow-technical"
version = "0.1.0"
description = "technical sim for pow bio interview"
authors = ["Alex Kilbo <akilbo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0"
ipykernel = "^6.0"
plotly = "^5.3.1"
pandas = "^1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 